# masters-project

./: CMakeLists.txt  IMPLEMENTIERUNGSBERICHT_SLOPES.md  biedl_kant.cpp  biedl_kant_slopes.cpp  canonical_order.cpp  canonical_order.h  onebend_core.cpp  onebend_core.h  onebend_slopes.cpp  onebend_test.cpp  planar_aug.cpp  planar_aug.h  slopes_core.cpp  slopes_core.h  slopes_test.cpp
webapp/: README.md  index.html  package-lock.json  package.json
webapp/src/: App.tsx  examples.ts  graphml.ts  i18n.tsx  index.css  random.ts
webapp/src/__tests__/: graphml.test.ts
webapp/src/algorithm/: augment.ts  embedding.ts  geometry.ts  pipeline.ts  planarity.ts  router.ts  stNumbering.ts  types.ts  verifier.ts
webapp/src/algorithm/__tests__/: onebend.test.ts  pipeline.test.ts  planarity.test.ts
webapp/src/algorithm/onebend/: augmentTriconnected.ts  canonicalOrder.ts  drawing.ts  pipeline.ts  types.ts  verifier.ts
webapp/src/components/: DrawingView.tsx  Gallery.tsx  GraphEditor.tsx  OneBendLegend.tsx  OneBendStatsPanel.tsx  OneBendStepper.tsx  OneBendView.tsx  SlopeLegend.tsx  StatsPanel.tsx  Stepper.tsx  colors.ts  svgUtils.ts  usePanZoom.ts
